fix(css): fix broken layout at exactly 1000px width

--- a/index.css
+++ b/index.css
@@ -163,7 +163,7 @@
 }
 
 /* Desktop only */
-@media screen and (min-width: 1001px) {
+@media screen and (min-width: 1000px) {
   .ec-footer {
     border-top-width: .6em;
     padding: 0 var(--grid-gutter-l);
